--- a/setup.yaml
+++ b/setup.yaml
@@ -1,3 +1,5 @@
 CPF:
-OPENAI_API_KEY: 
-IRPF_DIR: /ProgramasRFB/IRPF2025
+OPENAI_API_KEY:  #Deixe em branco caso a sua chave de API já esteja no arquivo .env
+IRPF_DIR_2025: /ProgramasRFB/IRPF2025 #Diretório do programa IRPF 2025
+
+
