feat: implement IRPF MCP server with database and knowledge base integration

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 *.DEC
 *.REC
 meus_arquivos/*
-.gitignore
 .env
 .venv/*
 setup.yaml
-chroma_db/*
-dados/*
+knowledge_base/chroma_db/
+__pycache__/*
+database/*
+.gitignore
+*.pyc
