Refactor code for document processing and database setup with improved error handling

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,9 @@ llama-index-embeddings-openai>=0.1.0
 llama-index-vector-stores-chroma>=0.1.0
 llama-index-retrievers-bm25>=0.1.0
 llama-index-llms-openai>=0.1.0
+llama-index-core>=0.10.0
 llama-cloud-services>=0.1.0
 openai>=1.0.0
-trafilatura>=0.10.0
-beautifulsoup4>=4.12.0
-requests>=2.31.0
 tqdm>=4.66.0
 nest-asyncio>=1.5.0
 PyStemmer>=2.2.0
