--- a/setup.yaml
+++ b/setup.yaml
@@ -1,5 +1,5 @@
-CPF: #Número do CPF sem traços ou pontos
+CPF: 30390505838 #Número do CPF sem traços ou pontos
 OPENAI_API_KEY:  #Deixe em branco caso a sua chave de API já esteja no env
 LLAMA_CLOUD_API_KEY:  #Deixe em branco caso a sua chave de API já esteja no env
-IRPF_DIR_2025: #Diretório do programa IRPF 2025
-DB_DIR: #Diretório do banco de dados
+IRPF_DIR_2025: /home/kenski/ProgramasRFB/IRPF2025
+DB_DIR: /home/kenski/projects/IRPF_MCP/database
